package io.github.johnytech6.listener;

import org.bukkit.event.EventHandler;
import org.bukkit.event.Listener;
import org.bukkit.event.player.PlayerQuitEvent;

public class PlayerLeaveListener implements Listener {


    @EventHandler
    public void OnPlayerLeave(PlayerQuitEvent event) {

    }
}