@startuml

title __LISTENER's Class Diagram__\n

  namespace io.github.johnytech6 {
    namespace listener {
      class io.github.johnytech6.listener.ClickEntityListener {
          + ClickEntityListener()
          + onPlayerClickEntity()
      }
    }
  }
  

  namespace io.github.johnytech6 {
    namespace listener {
      class io.github.johnytech6.listener.DmInteractChest {
          {static} ~ INVENTORY_TITLE : String
          ~ openChests : ArrayList<VirtualInventory>
          ~ plugin : Plugin
          + DmInteractChest()
          + OnPlayerInteract()
          + onInventoryClick()
          + onInventoryClose()
          + onInventoryDrag()
          - updateChest()
      }
    }
  }
  

  namespace io.github.johnytech6 {
    namespace listener {
      class io.github.johnytech6.listener.PlayerInteractArmorStandArmor {
          + OnPlayerArmorStandManipulate()
          + PlayerInteractArmorStandArmor()
      }
    }
  }
  

  namespace io.github.johnytech6 {
    namespace listener {
      class io.github.johnytech6.listener.PlayerJoinListener {
          - plugin : Plugin
          + OnPlayerJoin()
          + PlayerJoinListener()
      }
    }
  }
  

  namespace io.github.johnytech6 {
    namespace listener {
      class io.github.johnytech6.listener.PlayerLeaveListener {
          + OnPlayerLeave()
      }
    }
  }
  

  namespace io.github.johnytech6 {
    namespace listener {
      class io.github.johnytech6.listener.PlayerToggleSneakListener {
          + OnPlayerToggleSneak()
          + PlayerToggleSneakListener()
      }
    }
  }
  

  io.github.johnytech6.listener.ClickEntityListener .up.|> org.bukkit.event.Listener
  io.github.johnytech6.listener.ClickEntityListener o-- io.github.johnytech6.Handler.DMHandler : dmh
  io.github.johnytech6.listener.ClickEntityListener o-- io.github.johnytech6.Handler.HeroHandler : hh
  io.github.johnytech6.listener.ClickEntityListener o-- io.github.johnytech6.Handler.PuppeterHandler : ph
  io.github.johnytech6.listener.DmInteractChest .up.|> org.bukkit.event.Listener
  io.github.johnytech6.listener.DmInteractChest o-- io.github.johnytech6.Handler.DMHandler : dmh
  io.github.johnytech6.listener.PlayerInteractArmorStandArmor .up.|> org.bukkit.event.Listener
  io.github.johnytech6.listener.PlayerInteractArmorStandArmor o-- io.github.johnytech6.Handler.PuppeterHandler : ph
  io.github.johnytech6.listener.PlayerJoinListener .up.|> org.bukkit.event.Listener
  io.github.johnytech6.listener.PlayerJoinListener o-- io.github.johnytech6.Handler.DMHandler : dmh
  io.github.johnytech6.listener.PlayerJoinListener o-- io.github.johnytech6.Handler.HeroHandler : hh
  io.github.johnytech6.listener.PlayerJoinListener o-- io.github.johnytech6.Handler.PluginHandler : ph
  io.github.johnytech6.listener.PlayerLeaveListener .up.|> org.bukkit.event.Listener
  io.github.johnytech6.listener.PlayerToggleSneakListener .up.|> org.bukkit.event.Listener
  io.github.johnytech6.listener.PlayerToggleSneakListener o-- io.github.johnytech6.Handler.DMHandler : dmh
  io.github.johnytech6.listener.PlayerToggleSneakListener o-- io.github.johnytech6.Handler.PuppeterHandler : ph


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
